src/tests/errors/staticanalysis/naming/procedure_does_not_exist_fail.cmp
program procedure_does_not_exist_fail
begin

	proc xx()
	begin
	end;
    	proc main()
	begin
	   yy(); /* Fail: Procedure does not exist. */
	end

end